# typeness

./: .gitignore  CLAUDE.md  LICENSE  README.md  clipboard.py  hotkey.py  pyproject.toml  test_hotkey.py  test_keylog.py  typeness.py
.claude/skills/fix-transcription/: SKILL.md
.claude/skills/run-regression/: SKILL.md
docs/research/: 2026-02-12-voice-input-tool-feasibility.md  2026-02-14-debug-capture.md  2026-02-15-regression-testing-workflow.md
docs/specs/2026-02-13-global-hotkey-clipboard/: acceptance.feature  implementation.md  prd.md
docs/specs/2026-02-13-mvp-voice-input/: acceptance.feature  implementation.md  prd.md
docs/specs/2026-02-14-debug-capture/: acceptance.feature  implementation.md
docs/specs/2026-02-15-regression-testing/: acceptance.feature  implementation.md
src/typeness/: __main__.py  audio.py  debug.py  main.py  postprocess.py  replay.py  transcribe.py
tests/fixtures/: cases.example.json  cases.json
