[project]
name = "typeness"
version = "0.1.0"
description = "Local voice input tool that converts speech to structured written text"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "torch",
    "torchaudio",
    "transformers",
    "accelerate",
    "sounddevice",
    "numpy",
    "pynput",
    "pyperclip",
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu130" }
torchaudio = { index = "pytorch-cu130" }
